syntax = "proto2";

message RequestData {
  optional string detail = 1 [default = ""];
}